--- a/client/index.html
+++ b/client/index.html
@@ -9,8 +9,25 @@
   integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
   crossorigin="anonymous"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  	<script language="javascript" type="appication/javascript">
-  	console.log("running")
+</head>
+<body>
+	<div class="jumbotron">
+		<div class="container">
+			<h1>ToDo List</h1>
+			<div class="input-group">
+				<input id="newTask" type="text" class="form-control" placeholder="Need to do...">
+				<span class="input-group-btn">
+					<button id="addTask" class="btn btn-default" type="button">
+						Add Task
+					</button>button>
+				</span>
+			</div>
+		</div>
+	</div>
+	<div id="taskList" class="list-group">
+	</div>
+	<script language="javascript" type="application/javascript">
+  		console.log("running")
  		function getTasks(){
  			console.log('called')
  			$.getJSON('/tasks', function(result){
@@ -41,28 +58,6 @@
  			})
  		});
   	</script>
-</head>
-<body>
-	<div class="jumbotron">
-		<div class="container">
-			<h1>ToDo List</h1>
-			<div class="input-group">
-				<input id="newTask" type="text" class="form-control" placeholder="Need to do...">
-				<span class="input-group-btn">
-					<button id="addTask" class="btn btn-default" type="button">
-						Add Task
-					</button>button>
-				</span>
-			</div>
-		</div>
-	</div>
-	<div id="taskList" class="list-group">
-	</div>
+
 </body>
 </html>
-
-
-
-
-
-
